--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,6 @@ trigger:
 - master
 
 jobs:
-
 - job: 'Test'
   pool:
     vmImage: 'Ubuntu-16.04'
@@ -15,12 +14,13 @@ jobs:
     matrix:
       Python27:
         python.version: '2.7'
-      Python35:
-        python.version: '3.5'
+        TOXENV: lint,py27-cov
       Python36:
         python.version: '3.6'
+        TOXENV: py36
       Python37:
         python.version: '3.7'
+        TOXENV: py37
     maxParallel: 4
 
   steps:
@@ -34,7 +34,7 @@ jobs:
 
   - script: |
       pip install pytest
-      pytest tests --doctest-modules --junitxml=junit/test-results.xml
+      pytest tests --junitxml=junit/test-results.xml
     displayName: 'pytest'
 
   - task: PublishTestResults@2
