--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,6 +7,21 @@ trigger:
 - master
 
 jobs:
+
+- job: 'Lint'
+  pool:
+    vmImage: 'Ubuntu-16.04'
+
+  steps:
+    - task: UserPythonVersion@0
+      inputs:
+        versionSpec: '2.7'
+        architecture: 'x64'
+    - script: python -m pip install --upgrade pip && pip install -r flake8
+      displayName: "Install Dependencies"
+    - script: make lint
+      displayName: "Flake8 Lint"
+
 - job: 'Test'
   pool:
     vmImage: 'Ubuntu-16.04'
@@ -14,14 +29,14 @@ jobs:
     matrix:
       Python27:
         python.version: '2.7'
-        TOXENV: lint,py27-cov
+        TOXENV: py27-cov
       Python36:
         python.version: '3.6'
         TOXENV: py36
       Python37:
         python.version: '3.7'
         TOXENV: py37
-    maxParallel: 4
+    maxParallel: 3
 
   steps:
   - task: UsePythonVersion@0
@@ -29,13 +44,14 @@ jobs:
       versionSpec: '$(python.version)'
       architecture: 'x64'
 
-  - script: python -m pip install --upgrade pip && pip install -r requirements-dev.txt
-    displayName: 'Install dependencies'
+  - script: python -m pip install --upgrade pip && pip install tox
+    displayName: 'Install Test Runner'
 
-  - script: |
-      pip install pytest
-      pytest tests --junitxml=junit/test-results.xml
-    displayName: 'pytest'
+  - script: tox --notest
+    displayName: 'Install Dependencies'
+
+  - script: tox
+    displayName: 'Tox'
 
   - task: PublishTestResults@2
     inputs:
