--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ jobs:
     vmImage: 'Ubuntu-16.04'
 
   steps:
-    - task: UserPythonVersion@0
+    - task: UsePythonVersion@0
       inputs:
         versionSpec: '2.7'
         architecture: 'x64'
