--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,12 +17,13 @@ jobs:
       inputs:
         versionSpec: '2.7'
         architecture: 'x64'
-    - script: python -m pip install --upgrade pip && pip install -r flake8
+    - script: python -m pip install --upgrade pip && pip install flake8
       displayName: "Install Dependencies"
     - script: make lint
       displayName: "Flake8 Lint"
 
 - job: 'Test'
+  condition: succeeded()
   pool:
     vmImage: 'Ubuntu-16.04'
   strategy:
