--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,13 +17,13 @@ jobs:
       inputs:
         versionSpec: '2.7'
         architecture: 'x64'
-    - script: python -m pip install --upgrade pip && pip install flake8
+    - script: python -m pip install --upgrade pip && pip install flake8==3.5.0
       displayName: "Install Dependencies"
     - script: make lint
       displayName: "Flake8 Lint"
 
 - job: 'Test'
-  condition: succeeded()
+  condition: "succeeded()"
   pool:
     vmImage: 'Ubuntu-16.04'
   strategy:
